// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre GifGrid Debe mostrarse el componente  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Hola Mundo
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas sobre GifGrid debe mostrar items cuando se cargan las img useFetch 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Hola Mundo
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Goku"
      url="https://cualquiercosa.jpg"
    />
  </div>
</Fragment>
`;
